# CppHomeworks

10/: Algorithm.cpp  Algorithm.h  AllVariants.cpp  AllVariants.h  CMakeLists.txt  Chebyshev.cpp  Chebyshev.h  Common.h  Eucledian.cpp  Eucledian.h  Manhattan.cpp  Manhattan.h  Metric.cpp  Metric.h  NeareastPoint.cpp  NeareastPoint.h  Point.cpp  Point.h  RandomWay.cpp  RandomWay.h  Solver.cpp  Solver.h  main.cpp
11/: BadFromString.cpp  BadFromString.h  CMakeLists.txt  ConvertString.h  ConvertString.hxx  main.cpp
2/: Report.cpp  Report.h
3dyn/: Makefile
3stat/: Makefile
5/: CMakeLists.txt  String.h  main.cpp
6/: CMakeLists.txt  Human.cpp  Human.h  main.cpp
7/: Array.h  Array.hxx  CMakeLists.txt  Test.cpp  Test.h  main.cpp
8/: Animal.cpp  Animal.h  Bear.cpp  Bear.h  CMakeLists.txt  Man.cpp  Man.h  ManBearPig.cpp  ManBearPig.h  Pig.cpp  Pig.h  Unit.cpp  Unit.h  main.cpp
9/: Array.h  Array.hxx  CMakeLists.txt  main.cpp
